--- a/service.yaml
+++ b/service.yaml
@@ -8,7 +8,7 @@ spec:
     app: rabbitmq
   type: NodePort
   ports:
-  - name: management
+  - name: manage
     port: 15672
     targetPort: 15672
     nodePort: 30000
