--- a/service.yaml
+++ b/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq-service
-  namespace: rabbitmq
+  namespace: rabbit
 spec:
   selector:
     app: rabbitmq
